# django_tutorial

./: .editorconfig  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  docker.env  pyproject.toml  sample.env
polls/: admin.py  tests.py  views.py
polls/migrations/: 0001_initial.py
polls/static/polls/: style.css
scripts/: start.sh  wait_for_database.sh
server/: settings.py
