[tool.black]
target-version = ['py38']
exclude = '/migrations/'

[tool.poetry]
name = "app_server"
version = "2.0.0"
description = "Application server"
authors = ["Zac Tolley <zac@thetolleys.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.4"
psycopg2 = "^2.8.6"
django-environ = "^0.4.5"
gunicorn = "^20.1.0"


[tool.poetry.dev-dependencies]
black = "^21.5b2"
coverage = "^5.5"
freezegun = "^1.1.0"
pep8-naming = "^0.11.1"
flake8 = "^3.9.2"
flake8-bugbear = "^21.4.3"
flake8-commas = "^2.0.0"
add-trailing-comma = "^2.1.0"
flake8-import-order = "^0.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
